--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.AdminPanelPage"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
@@ -38,7 +39,7 @@
         </activity>
         <activity android:name=".activities.InfoPageYourSkill" />
         <activity android:name=".activities.ModifyInfoPage" />
-        <activity android:name=".activities.AboutPage"></activity>
+        <activity android:name=".activities.AboutPage" />
     </application>
 
 </manifest>
